# ggwave

./: CMakeLists.txt
examples/: CMakeLists.txt  ggwave-common-sdl2.cpp  ggwave-common-sdl2.h  ggwave-common.cpp
examples/ggwave-cli/: main.cpp
examples/spectrogram/: fft.h  main.cpp
examples/waver/: main.cpp
include/ggwave/: ggwave.h
src/: CMakeLists.txt  ggwave.cpp
tests/: test-ggwave.c  test-ggwave.cpp
